--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,12 @@ services:
   - redis
 script:
   - RAILS_ENV=test bundle exec rake teaspoon
-  - RAILS_ENV=test xvfb-run -a bundle exec rspec
+  - RAILS_ENV=test xvfb-run -a bundle exec parallel:spec
 before_script:
   - "sh -e /etc/init.d/xvfb start"
   - cp config/database.travis.yml config/database.yml
   - cp config/mongoid.travis.yml config/mongoid.yml
   - RAILS_ENV=test bundle exec rake db:drop db:create db:migrate
+  # - RAILS_ENV=test parallel:prepare
 #  - sh -c "psql -c 'DROP DATABASE IF EXISTS adiq_dev;' -U postgres"
 #  - sh -c "psql -c 'DROP DATABASE IF EXISTS adiq_dev;' -U postgres"
