--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 before_script:
   - "sh -e /etc/init.d/xvfb start"
   - cp config/database.travis.yml config/database.yml
-  - cp config/mongoid.travis.yml config/mongoid.yml
+  # - cp config/mongoid.travis.yml config/mongoid.yml
   - RAILS_ENV=test bundle exec rake db:drop db:create db:migrate
   # - RAILS_ENV=test parallel:prepare
 #  - sh -c "psql -c 'DROP DATABASE IF EXISTS adiq_dev;' -U postgres"
