--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,13 @@ services:
   - mongodb
   - redis
 script:
-  - RAILS_ENV=test xvfb-run -a bundle exec parallel:spec
+  - xvfb-run -a bundle exec parallel:spec
 before_script:
+  -bundle install
   - "sh -e /etc/init.d/xvfb start"
   - cp config/database.travis.yml config/database.yml
   # - cp config/mongoid.travis.yml config/mongoid.yml
-  - RAILS_ENV=test bundle exec rake db:drop db:create db:migrate
+  - bundle exec rake db:drop db:create db:migrate
   # - RAILS_ENV=test parallel:prepare
 #  - sh -c "psql -c 'DROP DATABASE IF EXISTS adiq_dev;' -U postgres"
 #  - sh -c "psql -c 'DROP DATABASE IF EXISTS adiq_dev;' -U postgres"
