--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
   - mongodb
   - redis
 script:
-  - xvfb-run -a bundle exec rake parallel:prepare
+  - xvfb-run -a bundle exec rake parallel:prepare[1]
   - xvfb-run -a bundle exec rake parallel:spec
 before_script:
   - "sh -e /etc/init.d/xvfb start"
