--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ before_script:
 - cp config/database.travis.yml config/database.yml
 # - cp config/mongoid.travis.yml config/mongoid.yml
 - export PARALLEL_TEST_PROCESSORS=4
-- bundle exec rake parallel:create parallel:load_schema parallel:prepare db:mongoid:purge
+- bundle exec rake parallel:create parallel:load_schema parallel:prepare
